added initial bio page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 	</head>
 
 	<body>
-		<img src="Me.jpg" alt="A handsome young man."/>
+		<h2>Quinn Clarke-Magrab</h2>
+		<img src="me.jpg" alt="A handsome young man."/>
 
-
-
-
+		<p><a href="bio.html">Bio</a></p>
 
 	</body>
 
