added all content

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
 	<body>
 		<h2>Quinn Clarke-Magrab</h2>
-		<img src="me.jpg" alt="A handsome young man."/>
+		<img src="me.jpg" alt="A handsome young man" id="selfie"/>
 
 		<p><a href="bio.html">Bio</a></p>
+		<p><a href="resume.html">Resume</a></p>
 
 	</body>
 
