--- a/resume.html
+++ b/resume.html
@@ -6,12 +6,57 @@
 
 	<body>
 		<h1>Quinn Clarke-Magrab</h1>
-		<h3>Education</h3>
-		<h4>Tufts University</h4>
-		<p>B.S. Candidate in Computer Science and Cognitive Brain Sciences</p>
-		<p>Expected Graduation: May 2021</p>
-		<p>GPA: 3.67</p>
-		<p>Dean’s List: Fall 2017, Spring 2018, Fall 2018</p>
-		<p>Relevant Coursework: Data Structures, Machine Structures and Assembly Level Programming, Web Programming, Discrete Math, Statistics, Logic</p>
+		<div id="education">
+			<h3>Education</h3>
+
+			<h4>Tufts University</h4>
+			<p>B.S. Candidate in Computer Science and Cognitive Brain Sciences</p>
+			<p>Expected Graduation: May 2021</p>
+			<p>GPA: 3.67</p>
+			<p>Dean’s List: Fall 2017, Spring 2018, Fall 2018</p>
+			<p>Relevant Coursework: Data Structures, Machine Structures and Assembly Level Programming, Web Programming, Discrete Math, Statistics, Logic</p>
+		</div>
+		<div id="experience">
+			<h3>Experience</h3>
+
+			<h4>Penguin Ice Cream, Bernardsville NJ (May 2018 - Aug. 2018)</h4>
+			<p>Trained new employees</p>
+			<p>Compiled and analyzed sales information</p>
+			<p>Served delicious products for customers to enjoy</p>
+			<p>In charge of general store maintenance</p>
+
+			<h4>Jos. A Bank, Westfield NJ (May 2017 - Sept. 2017)</h4>
+			<p>Organized and maintained sales and rental information</p>
+			<p>Assisted sales people on the floor and occasionally led sales</p>
+			<p>Measured and outfitted customers</p>
+		</div>
+		<div id="skills">
+			<h3>Skills</h3>
+
+			<h4>Computer Languages</h4>
+			<p>C/C++, R, HTML, CSS, Python</p>
+
+			<h4>Software</h4>
+			<p>Git Version Control, MSOffice, RStudio</p>
+
+			<h4>Graphic Design</h4>
+			<p>Adobe Photoshop, GIMP, Adobe InDesign</p>
+
+			<h4>Systems</h4>
+			<p>Linux, Mac OSX, Microsoft Windows</p>
+		</div>
+		<div id="leadership">
+			<h3>Leadership</h3>
+
+			<h4>Mentor - Let's Get Ready, Somerville MA (Dec. 2017 - Present)</h4>
+			<p>Lead classroom of 20+ students</p>
+			<p>Prepare students for SAT/ACT</p>
+			<p>Provide counseling for college and academics</p>
+
+			<h4>Leader/Head of Design - We Are Able, Chicago IL (Nov. 2017 - Present)</h4>
+			<p>Train groups of 30+ to better communicate with people with disabilities</p>
+			<p>Organize around accessibility issues facing communities</p>
+			<p>Create visual concepts and designs for marketing</p>
+		</div>
 	</body>
 </html>
