added initial styling and adjusted content

--- a/index.html
+++ b/index.html
@@ -4,23 +4,31 @@
 	<head>
 		<title>My Portfolio</title>
 		<meta charset="utf-8">
-
+		<link rel="stylesheet" href="index.css"/>
 	</head>
+
 
 	<body>
 		<h2>Quinn Clarke-Magrab</h2>
-		<img src="me.jpg" alt="A handsome young man" id="selfie"/>
+		<div id="background"></div>
+		<p>Welcome to my portfolio!</p>
+		<div id="container">
 
-		<p><a href="bio.html">Bio</a></p>
-		<p><a href="resume.html">Resume</a></p>
+			<div id="left">
+				<p><a href="bio.html">Bio</a></p>
+			</div>
 
+			<!-- <div id="center">
+				<img src="me.jpg" alt="A handsome young man" id="selfie"/>
+			</div> -->
+
+			<div id="right">
+				<p><a href="resume.html">Resume</a></p>
+			</div>
+
+			<div class="clear"></div>
+		</div>
 	</body>
-
-
-
-
-
-
 
 
 </html>
