--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Resume</title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="index.css"/>
 	</head>
 
 	<body>
