finished styling for index page

--- a/index.html
+++ b/index.html
@@ -10,17 +10,13 @@
 
 	<body>
 		<h2>Quinn Clarke-Magrab</h2>
-		<div id="background"></div>
-		<p>Welcome to my portfolio!</p>
+		<!--<div id="background"></div>-->
+		<img src="me.jpg" alt="A handsome young man" id="selfie"/>
 		<div id="container">
 
 			<div id="left">
 				<p><a href="bio.html">Bio</a></p>
 			</div>
-
-			<!-- <div id="center">
-				<img src="me.jpg" alt="A handsome young man" id="selfie"/>
-			</div> -->
 
 			<div id="right">
 				<p><a href="resume.html">Resume</a></p>
