--- a/resume.html
+++ b/resume.html
@@ -1,14 +1,27 @@
+<!----------------------
+ * Quinn Clarke-Magrab
+ * COMP 20
+ * Assignment 1
+ ---------------------->
 <!DOCTYPE html>
 <html>
 	<head>
 		<title>Resume</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="resume.css"/>
 	</head>
 
 	<body>
+		<div class="verticalStrip">
+			<h3 id="education">Education</h3>
+			<h3 id="experience">Experience</h3>
+			<h3 id="skills">Skills</h3>
+			<h3 id="leadership">Leadership</h3>
+		</div>
+
+		<div class="content">
 		<h1>Quinn Clarke-Magrab</h1>
-		<div id="education">
-			<h3>Education</h3>
+		<div id="educationBody">
 
 			<h4>Tufts University</h4>
 			<p>B.S. Candidate in Computer Science and Cognitive Brain Sciences</p>
@@ -17,9 +30,7 @@
 			<p>Dean’s List: Fall 2017, Spring 2018, Fall 2018</p>
 			<p>Relevant Coursework: Data Structures, Machine Structures and Assembly Level Programming, Web Programming, Discrete Math, Statistics, Logic</p>
 		</div>
-		<div id="experience">
-			<h3>Experience</h3>
-
+		<div id="experienceBody">
 			<h4>Penguin Ice Cream, Bernardsville NJ (May 2018 - Aug. 2018)</h4>
 			<p>Trained new employees</p>
 			<p>Compiled and analyzed sales information</p>
@@ -31,8 +42,7 @@
 			<p>Assisted sales people on the floor and occasionally led sales</p>
 			<p>Measured and outfitted customers</p>
 		</div>
-		<div id="skills">
-			<h3>Skills</h3>
+		<div id="skillsBody">
 
 			<h4>Computer Languages</h4>
 			<p>C/C++, R, HTML, CSS, Python</p>
@@ -46,8 +56,7 @@
 			<h4>Systems</h4>
 			<p>Linux, Mac OSX, Microsoft Windows</p>
 		</div>
-		<div id="leadership">
-			<h3>Leadership</h3>
+		<div id="leadershipBody">
 
 			<h4>Mentor - Let's Get Ready, Somerville MA (Dec. 2017 - Present)</h4>
 			<p>Lead classroom of 20+ students</p>
@@ -58,6 +67,7 @@
 			<p>Train groups of 30+ to better communicate with people with disabilities</p>
 			<p>Organize around accessibility issues facing communities</p>
 			<p>Create visual concepts and designs for marketing</p>
+		</div>
 		</div>
 	</body>
 </html>
