finished resume styling

--- a/resume.html
+++ b/resume.html
@@ -12,38 +12,37 @@
 	</head>
 
 	<body>
-		<div class="verticalStrip">
-			<h3 id="education">Education</h3>
-			<h3 id="experience">Experience</h3>
-			<h3 id="skills">Skills</h3>
-			<h3 id="leadership">Leadership</h3>
-		</div>
+		<div class="verticalStrip"></div>
 
 		<div class="content">
 		<h1>Quinn Clarke-Magrab</h1>
-		<div id="educationBody">
 
+		<h3 id="education">Education</h3>
+		<div id="educationBody">
 			<h4>Tufts University</h4>
 			<p>B.S. Candidate in Computer Science and Cognitive Brain Sciences</p>
-			<p>Expected Graduation: May 2021</p>
-			<p>GPA: 3.67</p>
-			<p>Dean’s List: Fall 2017, Spring 2018, Fall 2018</p>
-			<p>Relevant Coursework: Data Structures, Machine Structures and Assembly Level Programming, Web Programming, Discrete Math, Statistics, Logic</p>
+			<p>Expected Graduation: <span class="italics">May 2021</span></p>
+			<p>GPA: <span class="italics">3.67</span></p>
+			<p>Dean’s List: <span class="italics">Fall 2017, Spring 2018, Fall 2018</span></p>
+			<p>Relevant Coursework: <span class="italics">Data Structures, Machine Structures and Assembly Level Programming, Web Programming, Discrete Math, Multivariable Calculus, Statistics, Logic</span></p>
 		</div>
+
+		<h3 id="experience">Experience</h3>
 		<div id="experienceBody">
 			<h4>Penguin Ice Cream, Bernardsville NJ (May 2018 - Aug. 2018)</h4>
-			<p>Trained new employees</p>
-			<p>Compiled and analyzed sales information</p>
-			<p>Served delicious products for customers to enjoy</p>
-			<p>In charge of general store maintenance</p>
+			<p>- Trained new employees</p>
+			<p>- Compiled and analyzed sales information</p>
+			<p>- Served delicious products for customers to enjoy</p>
+			<p>- In charge of general store maintenance</p>
 
 			<h4>Jos. A Bank, Westfield NJ (May 2017 - Sept. 2017)</h4>
-			<p>Organized and maintained sales and rental information</p>
-			<p>Assisted sales people on the floor and occasionally led sales</p>
-			<p>Measured and outfitted customers</p>
+			<p>- Organized and maintained sales and rental information</p>
+			<p>- Assisted sales people on the floor and occasionally led sales</p>
+			<p>- Measured and outfitted customers</p>
 		</div>
-		<div id="skillsBody">
 
+		<h3 id="skills">Skills</h3>
+		<div id="skillsBody">
 			<h4>Computer Languages</h4>
 			<p>C/C++, R, HTML, CSS, Python</p>
 
@@ -56,17 +55,18 @@
 			<h4>Systems</h4>
 			<p>Linux, Mac OSX, Microsoft Windows</p>
 		</div>
-		<div id="leadershipBody">
 
+		<h3 id="leadership">Leadership</h3>
+		<div id="leadershipBody">
 			<h4>Mentor - Let's Get Ready, Somerville MA (Dec. 2017 - Present)</h4>
-			<p>Lead classroom of 20+ students</p>
-			<p>Prepare students for SAT/ACT</p>
-			<p>Provide counseling for college and academics</p>
+			<p>- Lead classroom of 20+ students</p>
+			<p>- Prepare students for SAT/ACT</p>
+			<p>- Provide counseling for college and academics</p>
 
 			<h4>Leader/Head of Design - We Are Able, Chicago IL (Nov. 2017 - Present)</h4>
-			<p>Train groups of 30+ to better communicate with people with disabilities</p>
-			<p>Organize around accessibility issues facing communities</p>
-			<p>Create visual concepts and designs for marketing</p>
+			<p>- Train groups of 30+ to better communicate with people with disabilities</p>
+			<p>- Organize around accessibility issues facing communities</p>
+			<p>- Create visual concepts and designs for marketing</p>
 		</div>
 		</div>
 	</body>
