changed index styling

--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
 
 
 	<body>
-		<h2>Quinn Clarke-Magrab</h2>
-		<!--<div id="background"></div>-->
-		<img src="me.jpg" alt="A handsome young man" id="selfie"/>
-		<div id="container">
+		<div class="verticalStrip"></div>
+		
+		<div class="content">
+			<h2>Quinn Clarke-Magrab</h2>
+			<img src="me.jpg" alt="A handsome young man" id="selfie"/>
+			<div id="container">
 
-			<div id="left">
-				<p><a href="bio.html">Bio</a></p>
+				<div id="left">
+					<p><a href="bio.html">Bio</a></p>
+				</div>
+
+				<div id="right">
+					<p><a href="resume.html">Resume</a></p>
+				</div>
+
+				<div class="clear"></div>
 			</div>
-
-			<div id="right">
-				<p><a href="resume.html">Resume</a></p>
-			</div>
-
-			<div class="clear"></div>
 		</div>
 	</body>
 
