--- a/index.html
+++ b/index.html
@@ -12,39 +12,30 @@
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     	<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 		<link rel="stylesheet" href="index.css"/>
-		<script type="text/javascript">
-			var pics = [];
-			for (var i = 0; i < 10; i++) {
-				pics[i] = "ch/" + (i + 86) + ".png";
-			}
-
-			function picture() {
-				var random = Math.floor((Math.random() * 10));
-				pic = document.getElementById("picture");
-				pic.innerHTML = "<img src=" + pics[random] + " alt='the best comic' id='pic'>";
-				caption = document.getElementById("caption");
-				caption.innerHTML = "<p>July 11th, 19" + (random + 86) + "</p>";
-			}
-		</script>
 	</head>
 
 
 	<body>
 		<div id="header">
         	<ul class="bar">
-                <li><a href="bio.html">Bio</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="resume.html">Resume</a></li>
         	</ul>
     	</div>
 
-    	<h2 id="title">Quinn Clarke-Magrab</h2>
+    	<div id="profile">
+    		<h1 id="title">Quinn Clarke-Magrab</h1>
+    		<img src="me.jpg" alt="a handsome young man" id="me">
+    		<div id="description" onclick="begin(); this.onclick=null;"><p id="bio">Who am I?</p></div>
+    	</div>
 
     	<!-- Calvin and Hobbes photos -->
-    	<button onclick="picture()">Random Birthday Calvin and Hobbes Comic</button>
-    	<div id="picture">
-    	</div>
+    	<button onclick="picture()">Calvin and Hobbes Strips on My Birthday</button>
+    	<div id="picture"></div>
     	<div id="caption"></div>
+
+    	<script src="index.js"></script>
 	</body>
 
 
