--- a/resume.html
+++ b/resume.html
@@ -12,9 +12,14 @@
 	</head>
 
 	<body>
-		<div class="verticalStrip"></div>
+		<div id="header">
+        	<ul class="bar">
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="resume.html">Resume</a></li>
+        	</ul>
+    	</div>
 
-		<div class="content">
 		<h1>Quinn Clarke-Magrab</h1>
 
 		<h3 id="education">Education</h3>
@@ -67,7 +72,6 @@
 			<p>- Train groups of 30+ to better communicate with people with disabilities</p>
 			<p>- Organize around accessibility issues facing communities</p>
 			<p>- Create visual concepts and designs for marketing</p>
-		</div>
 		</div>
 	</body>
 </html>
